--- a/app/views/blockInfos.html
+++ b/app/views/blockInfos.html
@@ -1,7 +1,7 @@
 <div class="container" style="padding-top: 50px;">
 
     <h1>Block
-        <small>View information about an Ethereum Block</small>
+        <small>View information about a Block</small>
     </h1>
 
     <div id="block-97785883" class="blockdiv">
@@ -30,34 +30,34 @@
                     {{timestamp}}
                 </td>
             </tr>
-            <tr>
+            <tr style="display:none;">
                 <td>Difficulty</td>
                 <td>
                     {{difficulty}}
                 </td>
             </tr>
-            <tr>
+            <tr style="display:none;">
                 <td>Nonce</td>
                 <td>{{nonce}}</td>
             </tr>
-            <tr>
+            <tr style="display:none;">
                 <td>Size</td>
                 <td>{{size}}</td>
             </tr>
-            <tr>
+            <tr style="display:none;">
                 <td>Miner</td>
                 <td><a href="./#/address/{{miner}}">{{miner}}</a></td>
             </tr>
-            <tr>
+            <tr style="display:none;">
                 <td>Gas Limit</td>
                 <td>{{gasLimit}}</td>
             </tr>
-            <tr>
+            <tr style="display:none;">
                 <td>Data</td>
                 <td>{{extraData}}</td>
             </tr>
 
-            <tr>
+            <tr style="display:none;">
                 <td>Data (Translated)</td>
                 <td>{{dataFromHex}}</td>
             </tr>
